Add Ctrl+Backspace support
Doesn't really work.

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -43,6 +43,7 @@ zinit ice wait lucid; zinit light lukechilds/zsh-nvm
 # history-substring-search
 bindkey '^[[A' history-substring-search-up
 bindkey '^[[B' history-substring-search-down
+bindkey '^H' backward-kill-word
 setopt complete_in_word
 setopt always_to_end
 WORDCHARS=''
