--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -60,7 +60,9 @@ bindkey  "^[[1;5C" forward-word      # Ctrl + ->
 bindkey  "^[[1;5D" backward-word     # Ctrl + <-
 
 # Set EDITOR
-if (( $+commands[nvim] )); then
+if [[ "$TERM_PROGRAM" = "vscode" ]]; then
+  export EDITOR="code --wait"
+elif (( $+commands[nvim] )); then
   export EDITOR=nvim
 elif (( $+commands[vim] )); then
   export EDITOR=vim
