--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -38,6 +38,7 @@ zinit light zdharma-continuum/fast-syntax-highlighting
 zinit light zsh-users/zsh-history-substring-search
 zinit light zsh-users/zsh-completions
 zinit light zsh-users/zsh-autosuggestions
+zinit light simnalamburt/cgitc
 {{ if ne .chezmoi.os "windows" }}
 zinit ice wait lucid; zinit light lukechilds/zsh-nvm
 {{ end }}
