Add $ZPROF mode

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,3 +1,5 @@
+[[ -v ZPROF ]] && zmodload zsh/zprof;
+
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
@@ -111,3 +113,4 @@ if [[ -d "~/.volta" ]]; then
 fi
 
 [ -s ~/.fig/fig.sh ] && source ~/.fig/fig.sh
+[[ -v ZPROF ]] && zprof
