--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -41,10 +41,10 @@ zinit ice depth=1 wait lucid; zinit light zsh-users/zsh-history-substring-search
 zinit light zsh-users/zsh-completions
 zinit light zsh-users/zsh-autosuggestions
 zinit ice lucid wait; zinit light simnalamburt/cgitc
-zinit ice lucid wait; zinit light rupa/z
+zinit ice lucid wait pick"z.sh"; zinit light rupa/z
 if (( $+commands[fzf] )); then
 zinit ice lucid wait; zinit light joshskidmore/zsh-fzf-history-search
-zinit ice lucid wait; zinit light changyuheng/fz
+zinit ice lucid wait pick"fz.sh"; zinit light changyuheng/fz
 zinit ice lucid wait; zinit light unixorn/fzf-zsh-plugin
 fi
 {{ if ne .chezmoi.os "windows" }}
