Enable persistent history on Zsh

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -19,9 +19,9 @@ export PATH="$HOME/.local/bin:$HOME/bin:$PATH"
 
 # Lines configured by zsh-newuser-install
 HISTFILE=~/.histfile
-HISTSIZE=1000
-SAVEHIST=1000
-setopt autocd extendedglob nomatch notify
+HISTSIZE=10000
+SAVEHIST=10000
+setopt autocd extendedglob nomatch notify appendhistory
 bindkey -v
 # End of lines configured by zsh-newuser-install
 
