--- a/dot_ssh/config.tmpl
+++ b/dot_ssh/config.tmpl
@@ -1,8 +1,9 @@
 Host *
-{{ if eq .chezmoi.os "windows" }}
+    IgnoreUnknown SecurityKeyProvider
+{{- if eq .chezmoi.os "windows" }}
     SecurityKeyProvider winhello.dll
-{{ else if eq .chezmoi.os "darwin" }}
+{{- else if eq .chezmoi.os "darwin" }}
     IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
-{{ else }}
+{{- else }}
     IdentityAgent ~/.1password/agent.sock
-{{ end }}
+{{- end }}
