--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -45,7 +45,7 @@ zinit ice lucid wait pick"z.sh"; zinit light rupa/z
 if (( $+commands[fzf] )); then
 zinit ice lucid wait; zinit light joshskidmore/zsh-fzf-history-search
 zinit ice lucid wait pick"fz.sh"; zinit light changyuheng/fz
-zinit ice lucid wait; zinit light unixorn/fzf-zsh-plugin
+zinit ice lucid wait; zinit light Aloxaf/fzf-tab
 fi
 {{ if ne .chezmoi.os "windows" }}
 zinit ice wait lucid; zinit light lukechilds/zsh-nvm
