Enable fsmonitor by default
https://github.blog/2022-06-27-highlights-from-git-2-37/#a-builtin-filesystem-monitor-for-windows-and-macos

This allows much faster status checks on Windows and macOS.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -6,8 +6,9 @@
 	email = basix@basix.tech
 	signingkey = F7E4D4D96797603C
 [core]
-	excludesfile = ~/.gitexclude
-    pager = delta
+	excludesfile = ~/.
+	pager = delta
+	fsmonitor = true
 [pull]
 	rebase = true
 [credential]
