Fix gitconfig exclude file

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -6,7 +6,7 @@
 	email = basix@basix.tech
 	signingkey = F7E4D4D96797603C
 [core]
-	excludesfile = ~/.
+	excludesfile = ~/.gitexclude
 	pager = delta
 	fsmonitor = true
 [pull]
