--- a/dot_ssh/config.tmpl
+++ b/dot_ssh/config.tmpl
@@ -2,8 +2,6 @@ Host *
     IgnoreUnknown SecurityKeyProvider
 {{- if eq .chezmoi.os "windows" }}
     SecurityKeyProvider winhello.dll
-{{- else if eq .chezmoi.os "darwin" }}
-    IdentityAgent "~/Library/Group Containers/2BUA8C4S2C.com.1password/t/agent.sock"
-{{- else }}
+{- else }}
     IdentityAgent ~/.1password/agent.sock
 {{- end }}
