Add support for gitconfig-local

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,6 +1,3 @@
-[author]
-	name = Basix
-	email = basix@basix.tech
 [user]
 	name = Basix
 	email = basix@basix.tech
@@ -48,3 +45,5 @@
 [delta]
     navigate = true  # use n and N to move between diff sections
 	theme = Monokai Extended
+[include]
+	path = ~/.gitconfig-local
