--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -11,10 +11,11 @@
 [pull]
 	rebase = true
 [credential]
+	helper =
 {{- if eq .chezmoi.os "windows" }}
 	helper = manager-core
 {{- else if eq .chezmoi.os "darwin" }}
-	helper = /usr/local/share/gcm-core/git-credential-manager-core
+	helper = /usr/local/share/gcm-core/git-credential-manager
 {{- end }}
 [init]
 	defaultBranch = main
