--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -15,7 +15,7 @@
 {{- if eq .chezmoi.os "windows" }}
 	helper = manager-core
 {{- else if eq .chezmoi.os "darwin" }}
-	helper = /usr/local/share/gcm-core/git-credential-manager
+	helper = /usr/local/share/gcm-core/git-credential-manager-core
 {{- end }}
 [init]
 	defaultBranch = main
@@ -34,13 +34,16 @@
 	autoSquash = true
 [merge]
 	conflictstyle = diff3
+	conflictstyle = zdiff3
 [diff]
 	algorithm = histogram
-    colorMoved = default
+	colorMoved = default
 [interactive]
     diffFilter = delta --color-only
-[merge]
-    conflictstyle = diff3
+[rerere]
+	enabled = true
+[push]
+	default = current
 
 # Delta
 [delta]
