Add things to gitconfig

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -2,8 +2,12 @@
 	name = Basix
 	email = basix@basix.tech
 	signingkey = F7E4D4D96797603C
+[column]
+	ui = auto
 [core]
 	excludesfile = ~/.gitexclude
+[help]
+	autocorrect = prompt
 {{- if lookPath "delta" }}
 	pager = delta
 {{- end }}
