--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -48,6 +48,9 @@
 	enabled = true
 [push]
 	default = current
+[alias]
+	toplevel = rev-parse --show-toplevel
+	gone = ! git fetch -p && git for-each-ref --format '%(refname:short) %(upstream:track)' | awk '$2 == \"[gone]\" {print $1}' | xargs -r git branch -D
 
 # Delta
 [delta]
