Fix newline issues

--- a/dot_config/chezmoi/create_chezmoi.toml.tmpl
+++ b/dot_config/chezmoi/create_chezmoi.toml.tmpl
@@ -1,7 +1,7 @@
 {{- if lookPath "age" -}}
 encryption = "age"
 {{- end }}
-{{- if lookPath "nvim" -}}
+{{- if lookPath "nvim" }}
 [merge]
     command = "nvim"
     args = ["-d", {{`"{{ .Destination }}", "{{ .Source }}", "{{ .Target }}"`}}]
