--- a/dot_ssh/config.tmpl
+++ b/dot_ssh/config.tmpl
@@ -15,3 +15,8 @@ Host *
 {{- else if stat (joinPath .chezmoi.homeDir ".1password") }}
     IdentityAgent ~/.1password/agent.sock
 {{- end }}
+
+Host rendezvous.namespace.so
+    SetEnv TERM=xterm-256color
+    StrictHostKeyChecking no
+    UserKnownHostsFile /dev/null
