--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -28,6 +28,8 @@
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
 	required = true
+[http]
+	postBuffer="1024M"
 
 [gpg]
 	program = gpg
